typescript/checker/tests/conformance/decorators/class/decoratorOnClass8.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/class/decoratorOnClass8.ts:5:1
  |
5 | @dec()
  | ^

